welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:21: error: identifier expected but 'var' found.
def getMondeLargeur(var nb: Int, var T:Array[Color])
                    ^Array1:51: error: ':' expected but '}' found.
}
^